allow Makefile tooling and build options to be overridden from command-line
For example, here's how to override the location of sdl2-config and augment the link stage with macOS framework fu:

make SDL2_CONFIG=/path/2/sdl2-config LDFLAGS_OPTS="Wl,-framework,CoreAudio,-framework,AudioToolbox,-framework,CoreFoundation,-framework,CoreGraphics,-framework,CoreVideo,-framework,ForceFeedback,-framework,IOKit,-framework,Carbon,-framework,AppKit"

--- a/bouncy-tune/Makefile
+++ b/bouncy-tune/Makefile
@@ -1,15 +1,14 @@
-CC := g++
-# CFLAGS := -g $$(sdl2-config --cflags) -I.. -std=c++11 -O0 -Wno-multichar -fmax-errors=3
+CC = g++
 CFLAGS := -g $$(sdl2-config --cflags) -I.. -std=c++11 -O \
   -Wuninitialized -Wshadow -Wall -Wno-non-virtual-dtor -Wno-delete-non-virtual-dtor -Wno-multichar
-LFLAGS := $$(sdl2-config --libs) -lSDL2_ttf
-OBJ := bouncy-tune.o ../make-waves/dump-wave.o ../sdl-widgets.a
+LDFLAGS := $$(sdl2-config --libs) -lSDL2_ttf
 
 .SUFFIXES=
 
+OBJ = bouncy-tune.o ../make-waves/dump-wave.o ../sdl-widgets.a
 bouncy-tune: $(OBJ)
 	make -C .. archive
-	$(CC) $(OBJ) -o $@ $(LFLAGS)
+	$(CC) $(OBJ) -o $@ $(LDFLAGS)
 
 %.o: %.cpp
 	$(CC) -c $< $(CFLAGS)
